Few additional fixes.

--- a/doc-Introduction_to_Self_Service_Portal/topics/Dashboard_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/Dashboard_Tab.adoc
@@ -13,7 +13,7 @@ Once you log in to the Self Service user interface, you will see the dashboard s
 * Approved Requests
 * Denied Requests
 
-image:sui-dashboard-tab.png[Dashboard Tab]
+image:sui-dashboard.png[Dashboard Tab]
 
 Monthly Charges - This Month To Date::
 
