--- a/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
@@ -10,7 +10,7 @@ image:sui-services.png[]
 
 You can perform most of these tasks in bulk (except editing service details and power operations). In order to do so, select multiple services and then click the designated button for the required task on the upper right corner of the screen. 
 
-Click on a service to view more details, including information about associated virtual machines and snapshots, and its relationship data. Additionally, under *Resources*, you can click on a virtual machine's name to see its properties, and perform power operations at the resource level. Click on *Snapshots* to see the list of available snapshots, as well as create or delete snapshots via the *Configuration* button. A snapshot is a copy of the virtual machine's disk file that captures the entire state of the virtual machine at that point in time. Use *Revert* under more options _(represented by three dots)_ to return a virtual machine to a previous state when you took the snapshot.
+Click on a service to view more details, including information about associated virtual machines and snapshots, and its relationship data. Additionally, under *Resources*, you can click on a virtual machine's name to see its properties, and perform power operations at the resource level. Click on *Snapshots* or the camera image:sui-camera-icon.png[camera icon] icon to go to the snapshots page to see a list of available snapshots, as well as create or delete snapshots via the *Configuration* button. A snapshot is a copy of the virtual machine's disk file (VMDK) that captures the entire state of the virtual machine at a point in time. Use *Revert* under more options _(represented by three dots)_ to return a virtual machine to a previous state when you took the snapshot.
 
 [[html5-console]]
 === Accessing the HTML5 Console
