--- a/doc-Managing_Infrastructure_and_Inventory/topics/Instances.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Instances.adoc
@@ -1,8 +1,9 @@
-[[instances-and-images]]
+[[instances]]
 = Instances and Images
 *Instances* and *Images* 
 
 *Images* are the static templates containing the software configuration from which you provision a running *Instance* - a virtual machine, with which you can interact - on your cloud provider. 
+
 The *Instance* and *Images* containers, combined with the ability to analyze information inside each instance or image, provides in-depth information across the cloud environment.
 This rich set of information enables {product-title} users to improve problem resolution times and effectively manage instances and images in their cloud environment.
 
@@ -10,17 +11,17 @@ The *Instances* and *Images* pages display all instances and images the server d
 The taskbar on each page is a menu driven set of buttons that provide access to functions related to instances and images.
 
 
-image:4222.png[]
+image:image_features.png[]
 
 . History button
 . Refresh screen button
 . Taskbar
-. Name search bar/Advanced Search button
-. View buttons
 . Download buttons
-. Navigation bar
+. View buttons
+. Name search bar/Advanced Search button
 . Sort dropdown
-. Main area in Grid View
+. Navigation bar
+. Main area in List View
 . Cloud/Filter Navigation
 
 Console uses *Virtual Thumbnails* to describe instances and images.
@@ -177,7 +178,7 @@ All of these accordions share a set of common controls:
 * Use the *Instances* to view, apply filters, and collect information about all of your instances.
 * Use *Images* to view, apply filters, and collect information about all of your images.
 
-Through the console, you can view your instances in multiple ways:
+Through the console, you can view your instances and images in multiple ways:
 
 * Filter instances
 * Change views
