--- a/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/topics/installation.adoc
+++ b/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/topics/installation.adoc
@@ -78,10 +78,9 @@ image:4941.png[title="Add Rule Dialog"]
 [[creating-a-custom-flavor]]
 === Creating a Custom Flavor
 
-A flavor is a resource allocation profile that specifies, for example, how many virtual CPUs and how much RAM can be allocated to an instance. You can, for example, run {product-title} on a Red Hat OpenStack m1.large flavor, which specifies a virtual machine with 4
-cores, 8GB RAM, and 80GB disk space. Creating a flavor to run {product-title} is optional.
+A flavor is a resource allocation profile that specifies, for example, how many virtual CPUs and how much RAM can be allocated to an instance. You can, for example, run {product-title} on a Red Hat OpenStack m1.large flavor, which specifies a virtual machine with 4 cores, 12 GB RAM, and 80 GB disk space. Creating a flavor to run {product-title} is optional.
 
-The following procedure demonstrates creating a flavor with the minimum requirements (4 cores, 8GB RAM, 44GB disk space) for {product-title}. For more information about flavors, see the Red Hat Enterprise Linux OpenStack Platform Administration User Guide.
+The following procedure demonstrates creating a flavor with the minimum requirements (4 cores, 12 GB RAM, 44 GB disk space) for {product-title}. For more information about flavors, see the Red Hat Enterprise Linux OpenStack Platform Administration User Guide.
 
 . Log in to the OpenStack dashboard as admin.
 . In the *Admin* tab, navigate to menu:System[Flavors].
