Applied peer review feedback - edited abstract, preface wording, and names of RHV and SCVMM providers to remove the confusing Manager Provider term

--- a/doc-Managing_Providers/topics/Adding_a_Microsoft_System_Center_Virtual_Machine_Manager_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_a_Microsoft_System_Center_Virtual_Machine_Manager_Provider.adoc
@@ -1,6 +1,6 @@
-= Adding a Microsoft System Center Virtual Machine Manager Provider
+= Adding a Microsoft SCVMM Provider
 
-After initial installation and creation of a {product-title} environment, add a Microsoft System Center Virtual Machine Manager provider to the appliance.
+After initial installation and creation of a {product-title} environment, add a Microsoft System Center Virtual Machine Manager (SCVMM) provider to the appliance.
 
 . Navigate to menu:Compute[Infrastructure > Providers].
 . Click  image:1847.png[] (*Configuration*), then click  image:1862.png[] (*Add a New Infrastructure Provider*).
