--- a/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
+++ b/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
@@ -29,15 +29,15 @@ image:2189.png[]
 include::Discovering_Multiple_Management_Systems.adoc[]
 
 :leveloffset: 2
-= Red Hat Virtualization Manager Providers
+= Red Hat Virtualization Providers
 
-To use a Red Hat Virtualization Manager provider, add it to the appliance and authenticate its hosts. You can also configure capacity and utilization data collection to help track usage and find common issues.
+To use a Red Hat Virtualization provider, add it to the appliance and authenticate its hosts. You can also configure capacity and utilization data collection to help track usage and find common issues.
 
 :leveloffset: 3
 include::Enabling_Red_Hat_Virtualization_CU.adoc[]
 
 :leveloffset: 3
-include::Adding_a_Red_Hat_Virtualization_Manager_Provider.adoc[]
+include::Adding_a_Red_Hat_Virtualization_Provider.adoc[]
 
 
 :leveloffset: 3
@@ -67,7 +67,7 @@ include::Authenticating_VMware_vCenter_Hosts.adoc[]
 :leveloffset: 2
 = Microsoft SCVMM Providers
 
-To use a Microsoft System Center Virtual Machine Manager provider, add it to the appliance and set up the SCVMM server for authentication.
+To use a Microsoft System Center Virtual Machine Manager (SCVMM) provider, add it to the appliance and set up the SCVMM server for authentication.
 
 [NOTE]
 ====
