--- a/doc-Managing_Providers/miq/index.adoc
+++ b/doc-Managing_Providers/miq/index.adoc
@@ -18,7 +18,7 @@ include::common/attributes/miq.adoc[]
 
 In {product-title_short}, a _provider_ is an external virtualization, cloud, or containers environment that manages multiple virtual machines or instances residing on multiple hosts. One example is Red Hat Virtualization, a platform that manages multiple hosts and virtual machines.
 
-In {product-title_short}, a _manager_ is an external management system that manages more than one type of resource. One example of a manager is OpenStack, which manages infrastucture, cloud, network, and storage resources.
+In {product-title_short}, a _manager_ is an external management environment that manages more than one type of resource. One example of a manager is OpenStack, which manages infrastucture, cloud, network, and storage resources.
 
 This guide covers working with providers and managers in {product-title_short}, which include:
 
