--- a/doc-Managing_Providers/topics/Adding_a_Red_Hat_Virtualization_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_a_Red_Hat_Virtualization_Provider.adoc
@@ -1,11 +1,11 @@
-= Adding a Red Hat Virtualization Manager Provider
+= Adding a Red Hat Virtualization Provider
 
-After initial installation and creation of a {product-title} environment, add a Red Hat Virtualization Manager provider to the appliance.
+After initial installation and creation of a {product-title} environment, add a Red Hat Virtualization provider to the appliance.
 
 . Navigate to menu:Compute[Infrastructure > Providers].
 . Click  image:1847.png[Configuration] (*Configuration*), then click  image:1862.png[Add a New Infrastructure Provider] (*Add a New Infrastructure Provider*). 
 . Enter a *Name* for the provider.
-. Select *Red Hat Virtualization Manager* from the *Type* list.
+. Select *Red Hat Virtualization* from the *Type* list.
 . Select the appropriate *Zone* for the provider. If you do not specify a zone, it is set to *default*.
 . Under *Endpoints* in the *Default* tab, configure the following: 
 * Enter the *Hostname* or IPv4 or IPv6 address of the provider.
@@ -17,7 +17,7 @@ The *Hostname* must be a unique fully qualified domain name.
 * Enter the *API Port* if your provider uses a non-standard port for access.
 * Select *Yes* or *No* to *Verify TLS Certificates* to specify whether to authenticate securely to the provider using TLS.
 ** If you select *Yes* for *Verify TLS Certificates*, you can either paste a custom certificate in the *Trusted CA Certificates* field in PEM format, or leave the *Trusted CA Certificates* field empty if your Red Hat Virtualization provider has a trusted Certificate Authority.
-* Provide the login credentials for the Red Hat Virtualization Manager administrative user:
+* Provide the login credentials for the Red Hat Virtualization administrative user:
 ** Enter the user name (formatted as `admin@internal`) in the *Username* field.
 ** Enter the password in the *Password* field.
 ** Confirm the password in the *Confirm Password* field.
@@ -36,7 +36,7 @@ To collect capacity and utilization data from a Red Hat Virtualization provider,
 * Enter the user password in the *Password* field.
 * Confirm the user password in the *Confirm Password* field.
 * Click *Validate* to confirm {product-title_short} can connect to the database.
-. Click *Add* to finish adding the Red Hat Virtualization Manager provider.
+. Click *Add* to finish adding the Red Hat Virtualization provider.
 
 
 
