--- a/doc-Managing_Providers/topics/Enabling_Red_Hat_Virtualization_CU.adoc
+++ b/doc-Managing_Providers/topics/Enabling_Red_Hat_Virtualization_CU.adoc
@@ -1,7 +1,7 @@
 [[enabling_CU_RHV]]
 = Enabling Red Hat Virtualization Capacity and Utilization Data Collection
 
-Configure the following to collect capacity and utilization data from a Red Hat Virtualization Manager provider:
+Configure the following to collect capacity and utilization data from a Red Hat Virtualization provider:
 
 * In {product-title_short}, enable the capacity and utilization server roles from the settings menu, in menu:Configuration[Server > Server Control]. For more information on capacity and utilization collection, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/deployment_planning_guide/#assigning_the_capacity_and_utilization_server_roles[Assigning the Capacity and Utilization Server Roles] in the _Deployment Planning Guide_.
 
