minor wording edit

--- a/doc-Managing_Providers/topics/app-self_signed_CA.adoc
+++ b/doc-Managing_Providers/topics/app-self_signed_CA.adoc
@@ -1,7 +1,7 @@
 [[app-self_signed_CA]]
 == Using a Self-Signed CA Certificate 
 
-Adding a self-signed Certificate Authority (CA) for SSL authentication requires additional configuration on OpenStack Platform and Microsoft System Center Virtual Machine Manager providers.
+Adding a self-signed Certificate Authority (CA) certificate for SSL authentication requires additional configuration on OpenStack Platform and Microsoft System Center Virtual Machine Manager (SCVMM) providers.
 
 [NOTE]
 ====
