--- a/doc-Managing_Infrastructure_and_Inventory/topics/Instances.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Instances.adoc
@@ -23,7 +23,7 @@ image:image_features.png[]
 . Main area in List View
 . Cloud/Filter Navigation
 
-Console uses *Virtual Thumbnails* to describe instances and images.
+Console uses Virtual Thumbnails to describe instances and images.
 Each thumbnail contains four quadrants by default.
 This allows you to glance at an instance or image for a quick view of its contents.
 
