implemented peer review suggestions from PR #379

--- a/doc-Managing_Providers/topics/app-self_signed_CA.adoc
+++ b/doc-Managing_Providers/topics/app-self_signed_CA.adoc
@@ -5,7 +5,7 @@ Adding a self-signed Certificate Authority (CA) certificate for SSL authenticati
 
 [NOTE]
 ====
-This procedure is not required for OpenShift Container Platform, Red Hat Virtualization, or middleware manager providers. These steps are needed only for providers that do not have the option to select *SSL trusting custom CA* as a *Security Protocol* in the user interface.
+This procedure is not required for OpenShift Container Platform, Red Hat Virtualization, or middleware manager providers, which have the option to select *SSL trusting custom CA* as a *Security Protocol* in the user interface. These steps are needed only for providers without this option in the user interface.
 ====
 
 Before adding the provider, configure the following:
