--- a/common/openstack/adding-an-openstack-infrastructure-provider.adoc
+++ b/common/openstack/adding-an-openstack-infrastructure-provider.adoc
@@ -3,15 +3,10 @@ When creating an OpenStack infrastructure provider in {product-title}, select th
 When using the `admin` credentials, a user in {product-title} provisions into the `admin` tenant, and sees images, networks, and instances that are associated with the `admin` tenant.
 
 [NOTE]
-=====
-You can set whether {product-title} should use the Telemetry service or Advanced Message Queueing Protocol (AMQP) for event monitoring. If you choose Telemetry, you should first configure the *ceilometer* service on the undercloud to store events. See xref:openstack-events-uc[] for instructions.
-
-For more information, see https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/architecture-guide/chapter-1-components#comp-telemetry[OpenStack Telemetry (ceilometer)] in the Red Hat OpenStack Platform _Architecture Guide_.
-=====
-
-[NOTE]
 ====
-To authenticate the provider using a self-signed Certificate Authority (CA), configure the {product-title_short} appliance to trust the certificate using the steps in  xref:app-self_signed_CA[] before adding the provider.
+* You can set whether {product-title} should use the Telemetry service or Advanced Message Queueing Protocol (AMQP) for event monitoring. If you choose Telemetry, you should first configure the *ceilometer* service on the undercloud to store events. See xref:openstack-events-uc[] for instructions. For more information, see https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/architecture-guide/chapter-1-components#comp-telemetry[OpenStack Telemetry (ceilometer)] in the Red Hat OpenStack Platform _Architecture Guide_.
+
+* To authenticate the provider using a self-signed Certificate Authority (CA), configure the {product-title_short} appliance to trust the certificate using the steps in  xref:app-self_signed_CA[] before adding the provider.
 ====
 
 . Navigate to menu:Compute[Infrastructure > Providers].
