Further updates to the Deployment Planning and Managing Infrastructure and Inventory restructuring, consistent with the changes finalised in the 4.2 guides.

--- a/common/cap-util-assign-server-roles.adoc
+++ b/common/cap-util-assign-server-roles.adoc
@@ -1,5 +1,5 @@
-. From the settings menu, select *Configuration*, then select the server to configure from menu:Settings[Zone] in the left pane of the appliance.
-. Navigate to the *Server Roles* list in the menu:Server[Server Control] section. From there, set the appropriate capacity and utilization roles to *ON*. Namely:
+. From the settings menu, select *Configuration*, then select the server to configure from menu:Settings[Zone] in the accordion menu on the left.
+. Navigate to the *Server Roles* list in the menu:Server[Server Control] section. From there, set the required capacity and utilization roles to *ON*, namely:
 .. *Capacity & Utilization Coordinator*
 .. *Capacity & Utilization Data Collector*
 .. *Capacity & Utilization Data Processor*
@@ -7,8 +7,8 @@
 
 Data collection is enabled immediately. However, the first collection begins
 5 minutes after the server is started, and every 10 minutes after that.
-Therefore, the longest the collection takes after enabling the *Capacity &
-Utilization Data Collector* server role is 10 minutes. The first collection
+Therefore, the longest the collection takes after enabling the Capacity &
+Utilization Collector role is 10 minutes. The first collection
 from a particular provider may take a few minutes since {product-title}
 is gathering data points going one month back in time.
 
