Fixed several typos in the API content.

--- a/api/appendices/resource_attributes.adoc
+++ b/api/appendices/resource_attributes.adoc
@@ -14,7 +14,7 @@ This page lists the available attributes when creating resources with the REST A
 * link:#categories[Categories]
 * link:#chargeback-rates[Chargeback Rates]
 * link:#conditions[Conditions]
-* link:#configuration-script-sources[Condiguration Script Sources]
+* link:#configuration-script-sources[Configuration Script Sources]
 * link:#groups[Groups]
 * link:#orchestration_templates[Orchestration Templates]
 * link:#policies[Policies]
