--- a/api/reference/snapshots.adoc
+++ b/api/reference/snapshots.adoc
@@ -17,7 +17,7 @@ Management of snapshots is provided for virtual machines and instances via the s
 [[snapshot-actions]]
 === Snapshot Actions
 
-The following snapshot actions are availables for the supported resources:
+The following snapshot actions are available for the supported resources:
 
 [cols="2,1,1",options="header",width=50%]
 |=====================
@@ -93,7 +93,7 @@ POST /api/instances/:id/snapshots
 ----
 {
   "name" : "name_of_new_snapshot",
-  "desciption" : "Description of new Snapshot",
+  "description" : "Description of new Snapshot",
   "memory" : false
 }
 ----
