--- a/api/reference/tagging.adoc
+++ b/api/reference/tagging.adoc
@@ -8,7 +8,7 @@
 * link:#assigning-tags[Assigning Tags]
 * link:#tag-specification[Tag Specification]
 * link:#assigning-tags-to-a-resource[Assigning Tags to a Resource]
-* link:#unassigning-tags-from-a-resource[Unassining Tags from a Resource]
+* link:#unassigning-tags-from-a-resource[Unassigning Tags from a Resource]
 * link:#bulk-assigning-tags[Bulk Assigning Tags]
 * link:#bulk-unassigning-tags[Bulk Unassigning Tags]
 
