--- a/api/overview/http.adoc
+++ b/api/overview/http.adoc
@@ -167,8 +167,8 @@ the following example:
 [cols=",",options="header",]
 |=======================================================================
 |URL |Description
-|/api |The REST API Entrypoint
-|/api/v**Version** |The REST Entrypoint for a specific version of the REST API
+|/api |The REST API entry point
+|/api/v**Version** |The REST entry point for a specific version of the REST API
 |/api/:collection |A top-level collection
 |/api/:collection/:id |A specific resource of that collection
 |/api/:collection/:id/:subcollection |Sub-collection under the specific resource
