--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -4,7 +4,7 @@
 
 [cols="1,1,1,3",options="header"]
 |=======================================================================
-|API Version |Entrypoints |Published |Description
+|API Version |Entry Points |Published |Description
 |*2.4.0* |/api, /api/v2.4.0 |June 2017 | CRUD on actions,
 Creating and accessing alert actions of alert resources,
 CRUD on Alert Definitions,
@@ -13,7 +13,7 @@ CRUD on Authentications,
 CRUD on Conditions,
 Querying Cloud Volumes,
 Querying Configuration Script Payloads,
-Creating and quering Authentications of Configuration Script Payloads,
+Creating and querying Authentications of Configuration Script Payloads,
 CRUD on Configuration Script Sources,
 Querying Load Balancers,
 Copying Orchestration Templates,
@@ -42,7 +42,7 @@ Bulk Queries,
 CRUD on Notifications,
 Blueprint Collection, CRUD, publishing, and Tagging,
 Custom Attributes on Providers,
-Additional Server information provided in API Entrypoint,
+Additional Server information provided in API entry point,
 CRUD on Arbitration Profiles,
 CRUD on Arbitration Rules,
 CRUD on Arbitration Settings,
