Added a note to make the (server roles configuration) concept clearer.

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -643,6 +643,11 @@ These roles are enabled by default on all servers.
 [[server-roles]]
 ====== Server Roles
 
+[NOTE]
+====
+Server roles that are in an active/active high availability configuration _(load balancing and failover protection)_ are active in more than one location; whereas, roles that are in an active/passive _(primary/secondary in the case of {product-title_short})_ high availability configuration _(failover protection)_, if more than one {product-title_short} server in a specific zone or region has this role, only one will be active _(primary)_ at a time and a failover has to occur to the passive _(secondary)_ appliance with that role.
+====
+
 [width="100%",cols="50%,70%a,30%,55%",options="header",]
 |=======================================================================
 |Server Role|Description|Zone or Region Aware|Primary/Secondary or Active/Active
