first half of cherry-picked changes from master branch

--- a/doc-Managing_Providers/topics/Adding_a_Red_Hat_Enterprise_Virtualization_Manager_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_a_Red_Hat_Enterprise_Virtualization_Manager_Provider.adoc
@@ -1,6 +1,6 @@
-= Adding a Red Hat Enterprise Virtualization Manager Provider
+= Adding a Red Hat Enterprise Virtualization Provider
 
-After initial installation and creation of a {product-title} environment, add a Red Hat Enterprise Virtualization Manager provider to the appliance.
+After initial installation and creation of a {product-title} environment, add a Red Hat Enterprise Virtualization provider to the appliance.
 
 . Navigate to menu:Compute[Infrastructure > Providers].
 . Click  image:1847.png[] (*Configuration*), then click  image:1862.png[] (*Add a New Infrastructure Provider*). 
@@ -16,7 +16,7 @@ The *Host Name* must use a unique fully qualified domain name.
 . Enter the *API Port* if your provider uses a non-standard port for access.
 . Select the appropriate *Zone* for the provider.
   By default, the zone is set to *default*.
-. In the *Credentials* area, under *Default*, provide the login credentials required for the Red Hat Enterprise Virtualization Manager administrative user:
+. In the *Credentials* area, under *Default*, provide the login credentials required for the Red Hat Enterprise Virtualization administrative user:
 * Enter the user name, `admin@internal`, in the *Username* field.
 * Enter the password in the *Password* field.
 * Confirm the password in the *Confirm Password* field.
