--- a/doc-Managing_Providers/topics/Authenticating_Red_Hat_Enterprise_Virtualization_Hosts.adoc
+++ b/doc-Managing_Providers/topics/Authenticating_Red_Hat_Enterprise_Virtualization_Hosts.adoc
@@ -13,7 +13,7 @@ After adding a Red Hat Enterprise Virtualization infrastructure provider, you mu
 . In the *Credentials* area, enter credentials for the following, as required:
  .. *Default*: This field is mandatory. Users should have privileged access such as, root or administrator. 
  .. *Remote Login*: Credentials for this field are required if SSH login is disabled for the *Default* account.
- .. *Web Services*: This tab is used for access to Web Services in Red Hat Enterprise Virtualization Manager.
+ .. *Web Services*: This tab is used for access to Web Services in Red Hat Enterprise Virtualization.
  .. *IPMI*:  This tab is used for access to IPMI.
 . Click *Validate*.
 . If editing multiple hosts:
