applied remainder of updates to providers guide from master branch

--- a/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
+++ b/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
@@ -34,7 +34,7 @@ include::Discovering_Multiple_Management_Systems.adoc[]
 To use a Red Hat Enterprise Virtualization Manager provider, add it to the appliance and authenticate its hosts.
 
 :leveloffset: 3
-include::Adding_a_Red_Hat_Enterprise_Virtualization_Manager_Provider.adoc[]
+include::Adding_a_Red_Hat_Enterprise_Virtualization_Provider.adoc[]
 
 
 :leveloffset: 3
@@ -64,7 +64,7 @@ include::Authenticating_VMware_vCenter_Hosts.adoc[]
 :leveloffset: 2
 = Microsoft SCVMM Providers
 
-To use a Microsoft System Center Virtual Machine Manager provider, add it to the appliance and set up the SCVMM server for authentication.
+To use a Microsoft System Center Virtual Machine Manager (SCVMM) provider, add it to the appliance and set up the SCVMM server for authentication.
 
 [NOTE]
 ====
