--- a/doc-Managing_Providers/topics/Middleware_Providers.adoc
+++ b/doc-Managing_Providers/topics/Middleware_Providers.adoc
@@ -1,5 +1,5 @@
 [[middleware_providers]]
-= Middleware Providers
+= Middleware Management Providers
 
 In {product-title}, a middleware provider is a middleware management environment that you can add to a {product-title} appliance to manage and interact with the resources in that environment. This chapter describes the different types of middleware providers that you can add to {product-title}, and how to manage them. 
 
@@ -11,7 +11,7 @@ The middleware provider extends {product-title} management capabilities to JBoss
 ifdef::cfme[]
 [NOTE]
 ====
-middleware management providers are available as a technology preview in this release of {product-title}. For more information on the support scope for features marked as technology previews, see link:https://access.redhat.com/support/offerings/techpreview/[Technology Preview Features Support Scope].
+Middleware management providers are available as a technology preview in this release of {product-title}. For more information on the support scope for features marked as technology previews, see link:https://access.redhat.com/support/offerings/techpreview/[Technology Preview Features Support Scope].
 ====
 endif::cfme[]
 
