--- a/doc-Managing_Providers/topics/Networking_Providers.adoc
+++ b/doc-Managing_Providers/topics/Networking_Providers.adoc
@@ -1,7 +1,11 @@
 [[network_providers]]
-= Network Providers
+= Network Managers
 
-{product-title} has introduced a new provider type called *_Network Managers_*. This new provider type exposes software-defined networking (SDN) providers starting with _OpenStack Network (Neutron)_, _Azure Network_, and _Amazon EC2 Network_. The software-defined networking inventory collection is enabled for OpenStack, Amazon and Azure providers. The OpenStack Network provider collects inventory of floating IPs from OpenStack so that IPs can be allocated without querying OpenStack database every time. Also, it refreshes all Neutron data from both OpenStack and OpenStack Infrastructure, and extracts the Neutron logic to a shared place. Note that management via the network providers configuration is currently disabled.
+In {product-title}, a network manager is an inventory of networking entities on existing cloud and infrastructure providers managed by your {product-title_short} appliance.
+
+This provider type exposes software-defined networking (SDN) providers including _OpenStack Network (Neutron)_, _Azure Network_, _Amazon EC2 Network_, and _Google Cloud Network_, which enables software-defined networking inventory collection. The OpenStack Network provider collects inventory of floating IPs from OpenStack so that IPs can be allocated without querying OpenStack database every time. Also, it refreshes all Neutron data from both OpenStack and OpenStack Infrastructure, and extracts the Neutron logic to a shared place. Note that management via the network providers configuration is currently disabled.
+
+This chapter describes the different types of network managers available to {product-title_short}, and how to manage them. Network managers are discovered automatically by {product-title_short} from other connected providers. 
 
 :leveloffset: 2
 include::Adding_Viewing_Network_Providers.adoc[]
