added missing image

--- a/doc-Managing_Providers/topics/Cloud_Providers.adoc
+++ b/doc-Managing_Providers/topics/Cloud_Providers.adoc
@@ -8,7 +8,7 @@ The web interface uses virtual thumbnails to represent cloud providers.
 Each thumbnail contains four quadrants by default, which display basic information about each provider:
 
 
-image:Cloudthumbnail.png[]
+image:Cloudthumbnail1.png[]
 
 . Number of instances
 . Management system software
