--- a/doc-Installing_on_Microsoft_Azure/cfme/master.adoc
+++ b/doc-Installing_on_Microsoft_Azure/cfme/master.adoc
@@ -17,6 +17,9 @@ include::common/attributes/cfme.adoc[]
 [[Installation]]
 include::topics/installation.adoc[]
 
+[[UI_Access]]
+include::topics/enabling-ui-access.adoc[]
+
 [[Configuration]]
 include::topics/configuration.adoc[]
 
