add note on ESX and ESXi hosts

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Performing_SmartState_Analysis_on_Hosts.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Performing_SmartState_Analysis_on_Hosts.adoc
@@ -1,7 +1,10 @@
 = Performing SmartState Analysis on Hosts
 
 Perform a SmartState Analysis on a host to collect additional information about it, such as patches, CPU, and memory.
-
+[NOTE]
+====
+ESX utilizes a service console for host management and can be accessed using SSH. ESXi hosts lack a service console and therefore SSH cannot be used to obtain information sets for patches, services, Linux packages, user groups, SSH Config, and FS Files 
+====
 [NOTE]
 ====
 `root` or administrator credentials are required to get patch information.
