Added a note about supported SSL options for Hawkular.

--- a/doc-Managing_Providers/topics/Middleware_Providers.adoc
+++ b/doc-Managing_Providers/topics/Middleware_Providers.adoc
@@ -23,11 +23,11 @@ After initial installation and creation of a {product-title} environment, add a 
 . From the *Type* list, select  *Hawkular*.
 . Accept the default *Zone*.
 . Under *Endpoints*, configure the following for the middleware provider:
-.. Select a *Security protocol* method to specify how to authenticate to the provider:
+.. Select a *Security protocol* method to specify how to authenticate to the provider. To use SSL to authenticate the provider, the middleware management server must be started with the service option `HAWKULAR_USE_SSL=true`.
 +
 [NOTE]
 ====
-To use SSL to authenticate the provider, the middleware management server must be started with the service option `HAWKULAR_USE_SSL=true`.
+The only supported security protocols for the current release of Hawkular are *SSL without validation* and *Non-SSL*.
 ====
 +
 ** *SSL* (SSL with validation) – Authenticate the provider securely using a trusted certificate authority. This requires that you have already configured your public and private keys in the *_/client-secrets_* directory as either two .PEM files or as a single .pkcs12 file.
