--- a/doc-Managing_Providers/topics/Adding_Azure_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_Azure_Providers.adoc
@@ -6,12 +6,13 @@
 
 [IMPORTANT]
 ====
-Before {product-title} can be authenticated to Microsoft Azure, a series of prerequisite steps must be followed on the Azure portal; see https://azure.microsoft.com/en-us/documentation/articles/resource-group-create-service-principal-portal/[Create Active Directory application and service principal account using the Azure portal]. The link describes how to configure the Azure Active Directory (AAD), create the application your organization is developing, and also how to obtain the Tenant ID, Client ID and Client Key to add the application that will allow you to connect the Azure instance as a provider to {product-title}. In the above link, it is important to note that during *Assign Application to Role*, in step 3, select the *Contributor* role and not the *Reader* role. Also, note that all of these steps currently can be performed using either the Azure Resource Manager or Service Manager (Classic) mode. 
+Before {product-title} can be authenticated to Microsoft Azure, a series of prerequisite steps must be followed on the Azure portal; see https://azure.microsoft.com/en-us/documentation/articles/resource-group-create-service-principal-portal/[Create Active Directory application and service principal account using the Azure portal]. The link describes how to configure the Azure Active Directory (AAD), create the application your organization is developing, and also how to obtain the Tenant ID, Subscription ID, Client ID and Client Key to add the application that will allow you to connect the Azure instance as a provider to {product-title}. In the above link, note that during *Assign Application to Role*, in step 3, select the *Contributor* role and not the *Reader* role. Currently, all of these steps can be performed using either the Azure Resource Manager or Service Manager (Classic) mode. 
 ====
 
-After a service principal account (instance of an application in a directory) has been created using the Azure portal, the following three pieces of information will be available within the Azure Active Directory (AAD) module:
+After a service principal account (instance of an application in a directory) has been created using the Azure portal, the following four pieces of information will be available within the Azure Active Directory (AAD) module:
 
 * Tenant ID
+* Subscription ID
 * Client ID
 * Client Key
 
@@ -30,6 +31,7 @@ When adding an Azure cloud provider, select a region from a list of possible reg
 . From the *Type* list, select *Azure*.
 . Select a region from the *Region* list.
 . Enter *Tenant ID*.
+. Enter *Subscription ID*.
 . Enter *Zone*.
 . In the *Credentials* section, enter the *Client ID* and *Client Key*; click *Validate*.
 . Click *Add*.
