--- a/doc-Managing_Providers/topics/Adding_Azure_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_Azure_Providers.adoc
@@ -2,15 +2,15 @@
 
 = Adding Azure Providers
 
-{product-title} supports Microsoft Azure providers. Before {product-title_short} can be authenticated to Microsoft Azure, you must complete a series of prerequisite steps using the Azure portal; see https://azure.microsoft.com/en-us/documentation/articles/resource-group-create-service-principal-portal/[Create Active Directory application and service principal account using the Azure portal]. Follow the steps to set up an Azure Active Directory (Azure AD) and assign the required permissions to it, then create an Azure Active Directory application, and obtain the *Application ID* (Client ID), *Directory ID* (Tenant ID), *Subscription ID*, and *Key Value* (Client Key) that are required to add and connect to the Azure instance as a provider in {product-title_short}. Currently, all of these steps can be performed using either the Azure Resource Manager or Service Manager (Classic) mode. 
+{product-title} supports Microsoft Azure providers. Before {product-title_short} can be authenticated to Microsoft Azure, you must complete a series of prerequisite steps using the Azure portal; see link:https://azure.microsoft.com/en-us/documentation/articles/resource-group-create-service-principal-portal/[Create Active Directory application and service principal account using the Azure portal]. Follow the steps to set up an Azure Active Directory (Azure AD) and assign the required permissions to it, then create an Azure Active Directory application, and obtain the *Application ID* (Client ID), *Directory ID* (Tenant ID), *Subscription ID*, and *Key Value* (Client Key) that are required to add and connect to the Azure instance as a provider in {product-title_short}. Currently, all of these steps can be performed using either the Azure Resource Manager or Service Manager (Classic) mode. 
 
 [NOTE]
 ====
-When following the prerequisite steps using the Azure portal:
+In the steps described in link:https://azure.microsoft.com/en-us/documentation/articles/resource-group-create-service-principal-portal/[Create Active Directory application and service principal account using the Azure portal]:
 
 * The *Application ID* obtained during _Get Application ID and Authentication Key_ is your *Client ID*. In the same section, after providing a description and a duration for the key, the *VALUE* displayed after clicking *Save* is your *Client Key*. If you choose an expiring key, make sure to note the expiration date, as you will need to generate a new key before that day in order to avoid an interruption.
 
-* The *Directory ID* obtained during _Get Tenant ID_ is your *Tenant ID*.
+* The *Directory ID* obtained during _Get Tenant ID_ is your *Tenant ID*. In Azure Active Directory (Azure AD), a tenant is a dedicated instance of the Azure AD service and is representative of an organization. It houses the users in a company and the information about them - their user profile data, permissions, groups, applications, and other information related to an organization and its security. To allow Azure AD users to sign in to your application, you must register your application in a tenant of your own which is assigned a Tenant ID (Directory ID). 
 
 * During _Assign Application to Role_, select the *Contributor* role and not the *Reader* role.
 
