--- a/doc-Managing_Providers/topics/Adding_Azure_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_Azure_Providers.adoc
@@ -14,10 +14,10 @@ In the steps described in link:https://azure.microsoft.com/en-us/documentation/a
 
 * During _Assign Application to Role_, select the *Contributor* role and not the *Reader* role.
 
-* To obtain your *Subscription ID*, log in to the Azure portal and click *Subscriptions* on the slide-out menu on the left. Find the appropriate subscription and see your Azure *Subscription ID* associated with it. The Azure *Subscription ID* is like a billing unit for all of the services consumed in your Azure account, including virtual machines and storage. The *Subscription ID* is in the form of a Globally Unique Identifier (GUID).
+* To obtain your *Subscription ID*, log in to the Azure portal and click *Subscriptions* on the slide-out menu on the left. Find the appropriate subscription and see your Azure *Subscription ID* associated with it. Note that if the *Subscriptions* tab is not visible, then click on *More services >* to find it. The Azure *Subscription ID* is like a billing unit for all of the services consumed in your Azure account, including virtual machines and storage. The *Subscription ID* is in the form of a Globally Unique Identifier (GUID).
 ====
 
-So, after a service principal account (instance of an application in a directory) has been created using the Azure portal, the following four pieces of information will be available within the Azure Active Directory (AAD) module.
+So, after a service principal account (instance of an application in a directory) has been created using the Azure portal, the following four pieces of information will be available within the Azure Active Directory (AD) module.
 
 * Directory ID (Tenant ID)
 * Subscription ID
